[project]
name = "pyuploadtool"
version = "20231223-1"
description = "A simple tool to upload artifacts to GitHub releases"
authors = [
    { name = "TheAssassin", email = "theassassin@assassinate-you.net" }
]
license = "MIT"
readme = "README.md"

[tool.poetry]
homepage = "https://github.com/TheAssassin/pyuploadtool"
repository = "https://github.com/TheAssassin/pyuploadtool"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.6.2"
pygithub = "^1.54"
coloredlogs = "^14"
requests = "^2.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

[tool.poetry.scripts]
pyuploadtool = 'pyuploadtool:__main__'

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
