[tool.poetry]
name = "pyuploadtool"
version = "20250213-2"
description = "A simple tool to upload artifacts to GitHub releases"
authors = [
    "TheAssassin <theassassin@assassinate-you.net>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TheAssassin/pyuploadtool"
repository = "https://github.com/TheAssassin/pyuploadtool"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.12.0"
pygithub = "^2.6.1"
coloredlogs = "^15"
requests = "^2.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

[tool.poetry.scripts]
pyuploadtool = 'pyuploadtool:__main__'

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
